# Attention_Monitor

./: .gitignore  README.md  main.py  main_offline.py  pyproject.toml
src/: depth_estimator.py  face_mesh_detector.py  gaze_logic.py  head_pose.py  stats.py  video_processor.py
src/utils/: __init__.py  mesh_visualizer.py  visualizer.py
