[project]
name = "attention-monitor"
version = "0.1.0"
description = "Face Mesh detection using MediaPipe"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

